k8s/author/service_author.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-author
spec:
  type: ClusterIP
  selector:
    app: author-deployment-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
